--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gleisonnanet/erpCore",
+    "name": "gleisonnanet/erpcore",
     "description": "ERP brasileiro de código fonte aberto escrito sob o Laravel Framework",
     "keywords": ["erp", "openerp", "erp php", "laravel"],
     "license": "MIT",
