--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
             "database"
         ],
         "psr-4": {
-            "erpCore\\": "src"
+            "erpcore\\": "src"
         }
     },
     "config": {
